{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 72,
  "lineage": "b915dcda-9d8a-8806-eec8-84b21969090b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:864419182307:listener/app/istox-aws-alb/3936e4954633f8c0/566b3d94702a2be2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "ok",
                    "status_code": "200"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:864419182307:listener/app/istox-aws-alb/3936e4954633f8c0/566b3d94702a2be2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:864419182307:loadbalancer/app/istox-aws-alb/3936e4954633f8c0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:864419182307:loadbalancer/app/istox-aws-alb/3936e4954633f8c0",
            "arn_suffix": "app/istox-aws-alb/3936e4954633f8c0",
            "dns_name": "istox-aws-alb-1051431446.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:864419182307:loadbalancer/app/istox-aws-alb/3936e4954633f8c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "istox-aws-alb",
            "security_groups": [
              "sg-0a2fcf75f61a8becb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-022830a78c368afeb"
              },
              {
                "subnet_id": "subnet-047f7e256d339ecd0"
              },
              {
                "subnet_id": "subnet-0e997aecb7397fa2f"
              }
            ],
            "subnets": [
              "subnet-022830a78c368afeb",
              "subnet-047f7e256d339ecd0",
              "subnet-0e997aecb7397fa2f"
            ],
            "tags": {
              "Name": "istox_aws_alb"
            },
            "vpc_id": "vpc-0dec7d6c56c6acf9c",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.alb.aws_security_group.public_alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:864419182307:targetgroup/istox-alb-tg/c78baba71dcbfa2b",
            "arn_suffix": "targetgroup/istox-alb-tg/c78baba71dcbfa2b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:864419182307:targetgroup/istox-alb-tg/c78baba71dcbfa2b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "istox-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dec7d6c56c6acf9c"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_security_group.public_alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864419182307:security-group/sg-0a2fcf75f61a8becb",
            "description": "istox default public ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2fcf75f61a8becb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "istox_default_public_alb_sg",
            "name_prefix": null,
            "owner_id": "864419182307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "istox_public_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dec7d6c56c6acf9c"
          }
        }
      ]
    }
  ]
}